--- a/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.scss
@@ -1,3 +1,28 @@
 .active {
   background-color: var(--ion-color-ibf-chat-self);
 }
+.containerDiv{
+  line-height: 1px;
+  margin: 2px;
+  display: flex;
+}
+.containerOne {
+  justify-content: space-between;
+  align-items: center; 
+  display: flex; 
+  flex-direction: column;
+}
+.containerTwo {
+  display: block; 
+  margin: 2px; 
+  height: 30px; 
+  width: 30px;
+}
+.containerThree {
+  font-size: 10px; 
+  padding: 5px; 
+  display: block;
+}
+
+
+
