--- a/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.scss
@@ -11,12 +11,14 @@
   align-items: center; 
   display: flex; 
   flex-direction: column;
+  cursor:pointer;
 }
 .containerTwo {
   display: block; 
   margin: 2px; 
   height: 30px; 
   width: 30px;
+  cursor:pointer;
 }
 .containerThree {
   font-size: 10px; 
