feat: show all districts in old event scenario AB#8881

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -102,9 +102,7 @@
     <app-video-guide-button color="ibf-white"></app-video-guide-button>
   </app-dialogue-turn>
   <!-- Old event -->
-  <app-dialogue-turn
-    *ngIf="eventService.state.activeEvent && !eventService.state.activeTrigger"
-  >
+  <app-dialogue-turn *ngIf="eventService.isOldEvent()">
     <p
       [innerHTML]="
         'chat-component.' + disasterCategory + 'active-event-no-trigger.welcome'
