--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -36,7 +36,8 @@
             | translate
               : {
                   name: authService.displayName,
-                  timeUnits: eventService.state.triggerLeadTime,
+                  leadTime: eventService.state.triggerLeadTime,
+                  timeUnit: eventService.state.timeUnit,
                   disasterTypeLabel: disasterTypeLabel,
                   monthYear: eventService.state.firstLeadTimeName
                 }
@@ -51,7 +52,8 @@
             'new-event-active-trigger.new-event-early-trigger'
             | translate
               : {
-                  timeUnits: eventService.state.firstLeadTimeLabel,
+                  leadTime: eventService.state.firstLeadTimeLabel,
+                  timeUnit: eventService.state.timeUnit,
                   disasterTypeLabel: disasterTypeLabel
                 }
         "
@@ -87,7 +89,8 @@
             : {
                 name: authService.displayName,
                 startDate: eventService.state.event.startDate,
-                timeUnits: eventService.state.firstLeadTimeLabel,
+                leadTime: eventService.state.firstLeadTimeLabel,
+                timeUnit: eventService.state.timeUnit,
                 disasterTypeLabel: disasterTypeLabel,
                 monthYear: eventService.state.firstLeadTimeName
               }
