feat: give alert_threshold layer outline in legend AB#9072

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -65,6 +65,7 @@
               [class.waterpoint-layer]="
                 layer.name === IbfLayerName.waterpoints && layer.active
               "
+              [class.outline-layer]="layer.name === IbfLayerName.alertThreshold && layer.active"
               [style.background]="layer.active ? layer.legendColor : null"
             ></ion-col>
             <ion-col
