--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -49,6 +49,11 @@
             .waterpoint-layer {
               background-image: url('../../../assets/markers/waterpoint.png');
             }
+            .outline-layer {
+              border: solid;
+              border-color: var(--ion-color-ibf-outline-red) !important;
+              border-width: 3px !important;
+            }
 
             .layer-control-label-col {
               border-right: 1px solid var(--ion-color-light);
