--- a/interfaces/IBF-dashboard/src/theme/variables.scss
+++ b/interfaces/IBF-dashboard/src/theme/variables.scss
@@ -351,10 +351,13 @@
   /** ibf-orange **/
   --ion-color-ibf-orange: #fcb50c;
   --ion-color-ibf-orange-rgb: 252, 181, 12;
-  --ion-color-ibf-yellow-contrast: #000000;
+  --ion-color-ibf-orange-contrast: #000000;
   --ion-color-ibf-orange-contrast-rgb: 0, 0, 0;
   --ion-color-ibf-orange-shade: #fcb50c;
   --ion-color-ibf-orange-tint: #fcb50c;
+
+  /** ibf-outline-red **/
+  --ion-color-ibf-outline-red: #c22400;
 
   ion-button {
     text-transform: none;
