--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -65,7 +65,9 @@
               [class.waterpoint-layer]="
                 layer.name === IbfLayerName.waterpoints && layer.active
               "
-              [class.outline-layer]="layer.name === IbfLayerName.alertThreshold && layer.active"
+              [class.outline-layer]="
+                layer.name === IbfLayerName.alertThreshold && layer.active
+              "
               [style.background]="layer.active ? layer.legendColor : null"
             ></ion-col>
             <ion-col
