--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -15,6 +15,7 @@
         : 'ibf-no-alert-tertiary'
     }}"
     fill="solid"
+    data-test="time-line-button"
     [class.active]="timeStepButton.active"
     (click)="handleTimeStepButtonClick(timeStepButton.value)"
   >
