--- a/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
@@ -1,13 +1,16 @@
 <div class="containerDiv">
+  
   <div
     *ngFor="let disasterType of disasterTypes"
     (click)="switchDisasterType(disasterType)"
+    data-test="disaster-Type"
     [ngClass]="{ active: disasterType.disasterType === selectedDisasterType }"
     class="containerOne"
   >
     <div *ngIf="disasterType.disasterType === selectedDisasterType">
       <ion-icon
         class="ibf"
+       
         [src]="
           disasterType.activeTrigger
             ? disasterTypeMap[disasterType.disasterType].selectedTriggered
@@ -33,6 +36,7 @@
       </ion-icon>
     </div>
     <ion-label
+    data-test="disaster-labelname"
       class="containerThree"
       *ngIf="disasterType.disasterType === selectedDisasterType"
       >{{ disasterType.label }}</ion-label
