feat: implemented dam layer #AB9154 #AB9155 #AB9217

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -62,6 +62,9 @@
               [class.red-cross-layer]="
                 layer.name === IbfLayerName.redCrossBranches && layer.active
               "
+              [class.dam-layer]="
+                layer.name === IbfLayerName.damSites && layer.active
+              "
               [class.waterpoint-layer]="
                 layer.name === IbfLayerName.waterpoints && layer.active
               "
