--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -46,6 +46,9 @@
             .red-cross-layer {
               background-image: url('../../../assets/markers/red-cross.png');
             }
+            .dam-layer {
+              background-image: url('../../../assets/markers/dam.png');
+            }
             .waterpoint-layer {
               background-image: url('../../../assets/markers/waterpoint.png');
             }
