fix: login email should support dot character AB#9307

--- a/interfaces/IBF-dashboard/src/app/components/login-form/login-form.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/login-form/login-form.component.html
@@ -13,7 +13,7 @@
       type="email"
       required
       inputmode="email"
-      pattern="[a-zA-Z0-9]+@[a-zA-Z0-9]+\.[a-zA-Z0-9]+"
+      pattern="[a-zA-Z0-9\.]+@[a-zA-Z0-9]+\.[a-zA-Z0-9]+"
       autocomplete="email username"
       clearInput="true"
       data-test="input-user"
