--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -243,6 +243,7 @@
   --width: 600px;
 }
 
-.ibf-layer-control-popover {
+.ibf-layer-control-popover,
+.ibf-indicator-information-popover {
   --width: 400px;
 }
