fix: input autofill style should be readable AB#9486

--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -247,3 +247,9 @@
 .ibf-indicator-information-popover {
   --width: 400px;
 }
+
+// https://stackoverflow.com/a/68240841/1753041
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
+}
