--- a/interfaces/IBF-dashboard/src/app/components/layer-control-info-popover/layer-control-info-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/layer-control-info-popover/layer-control-info-popover.component.html
@@ -5,7 +5,7 @@
       name="close-circle"
       size="large"
       (click)="closePopover()"
-      data-test='close-matrix-icon'
+      data-test="close-matrix-icon"
     ></ion-icon>
     <ion-card-title>
       {{ layer.label }}
@@ -14,7 +14,6 @@
   <ion-card-content
     class="ion-padding-top"
     [innerHTML]="layer.description"
-    
     data-test="matrix-popupinfo"
   ></ion-card-content>
 </ion-card>
