activation-page-added

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -37,9 +37,7 @@
 
     <ion-list color="dark" class="ion-no-padding">
       <ion-item
-        href="https://github.com/rodekruis/IBF-system/releases/tag/{{
-          activation-report
-        }}"
+        href="/activation-log"
         lines="full"
         rel="noopener noreferrer"
         target="_blank"
