fix: lint AB#8538

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -42,7 +42,9 @@
         rel="noopener noreferrer"
         target="_blank"
       >
-        <ion-label [translate]="'activation-page.activation-report'"></ion-label>
+        <ion-label
+          [translate]="'activation-page.activation-report'"
+        ></ion-label>
       </ion-item>
     </ion-list>
   </ion-content>
