--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
@@ -1,7 +1,7 @@
 <div class="activation-log-container">
   <div *ngFor="let activationLog of activationLogs">
     <div class="activation-log-row">
-      {{ activationLog | json }}
+      {{ activationLog }}
     </div>
   </div>
 </div>
