feat: added error message AB#10164

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -2,6 +2,19 @@
   <!-- No event -->
   <app-disaster-type></app-disaster-type>
   <app-dialogue-turn
+    isWarn="true"
+  >
+    <p 
+        [innerHTML]="
+        'chat-component.' + disasterCategory + 'warn-label.message'
+          | translate
+            : {
+                leadTime: eventService.state.firstLeadTimeLabel
+              }
+      "
+    ></p> 
+  </app-dialogue-turn>
+  <app-dialogue-turn
     *ngIf="!eventService.state.activeEvent && !eventService.state.activeTrigger"
   >
     <p
