--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -3,7 +3,6 @@
   class="dialogue-turn ion-align-items-start"
   [ngClass]="{
     'is-connected': isConnected,
-    'is-ward': isWarn,
     'is-other ion-justify-content-start': !isSelf,
     'is-self ion-justify-content-end': isSelf,
     'is-pending': animate && !isSpoken,
@@ -25,16 +24,15 @@
     </ng-container>
   </div>
   <div class="dialogue-turn--content">
-    <ion-card [color]="isWarn ? 'danger' : 'ibf-chat-self'" >
-      <ion-card [color]="isSelf ? 'ibf-chat-self' : 'ibf-chat-not-self'" >
-    
-      </ion-card>
-    
-    <ion-card-content>
-        <ng-content></ng-content>
-        <small><app-timestamp [timestamp]="timestamp"></app-timestamp></small>
-      </ion-card-content>
-  </ion-card>
-    <span class="dialogue-turn--speech-arrow"></span>
+    <ion-card [color]="isSelf ? 'ibf-chat-self' : (isWarn ? 'danger' : 'ibf-chat-not-self')" >
+        <ion-card-content>
+          <ng-content></ng-content>
+          <small><app-timestamp [timestamp]="timestamp"></app-timestamp></small>
+        </ion-card-content>
+    </ion-card>
+    <span [ngClass]="{
+      'dialogue-turn--speech-arrow' : !isWarn,
+      'dialogue-turn--speech-arrow-warn' : isWarn
+    }"></span>
   </div>
 </div>
