--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
@@ -81,9 +81,21 @@
     border-right-color: transparent;
 
     right: var(--dialogue-turn--margin-around-card-horizontal);
-    border-left-color: var(--ion-color-danger);
+    border-left-color: var(--ion-color-ibf-chat-self);
   }
 }
+
+.dialogue-turn--speech-arrow-warn {
+  // Reset LTR-styles first:
+  left: auto;
+  height: 16px;
+  width: 16px;;
+  border-right-color: transparent;
+
+  right: var(--dialogue-turn--margin-around-card-horizontal);
+  border-left-color: red;
+}
+
 
 .dialogue-turn.is-self {
   .dialogue-turn--actor {
@@ -97,7 +109,7 @@
 
   .dialogue-turn--speech-arrow {
     right: var(--dialogue-turn--margin-around-card-horizontal);
-    border-left-color: var(--ion-color-danger);
+    border-left-color: var(--ion-color-ibf-chat-self);
   }
 
   // Adjust for RTL: (Limited support: https://developer.mozilla.org/en-US/docs/Web/CSS/:dir#Browser_compatibility)
@@ -123,10 +135,6 @@
   .dialogue-turn--content {
     transform-origin: top center;
   }
-}
-
-.dialogue-turn.is-warn {
-  background-color: red;
 }
 
 .dialogue-turn.is-pending {
