feat: added message accroding to lastModelRunDateTIme AB#8806

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -3,6 +3,7 @@
   <app-disaster-type></app-disaster-type>
   <app-dialogue-turn
     isWarn="true"
+    isConnected="false"
   >
     <p 
         [innerHTML]="
