--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -24,15 +24,12 @@
     </ng-container>
   </div>
   <div class="dialogue-turn--content">
-    <ion-card [color]="isSelf ? 'ibf-chat-self' : (isWarn ? 'danger' : 'ibf-chat-not-self')" >
+    <ion-card [color]="isSelf ? 'ibf-chat-self' : (isLastModelDateStale() ? 'danger' : 'ibf-chat-not-self')" >
         <ion-card-content>
           <ng-content></ng-content>
           <small><app-timestamp [timestamp]="timestamp"></app-timestamp></small>
         </ion-card-content>
     </ion-card>
-    <span [ngClass]="{
-      'dialogue-turn--speech-arrow' : !isWarn,
-      'dialogue-turn--speech-arrow-warn' : isWarn
-    }"></span>
+    
   </div>
 </div>
