--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -1,19 +1,16 @@
 <ion-content scrollY="true">
   <!-- No event -->
   <app-disaster-type></app-disaster-type>
-  <app-dialogue-turn
-    isWarn="true"
-    isConnected="false"
-  >
-    <p 
-        [innerHTML]="
+  <app-dialogue-turn isWarn="true" isConnected="true">
+    <p
+      [innerHTML]="
         'chat-component.' + disasterCategory + 'warn-label.message'
           | translate
             : {
                 leadTime: eventService.state.firstLeadTimeLabel
               }
       "
-    ></p> 
+    ></p>
   </app-dialogue-turn>
   <app-dialogue-turn
     *ngIf="!eventService.state.activeEvent && !eventService.state.activeTrigger"
