--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -24,12 +24,19 @@
     </ng-container>
   </div>
   <div class="dialogue-turn--content">
-    <ion-card [color]="isSelf ? 'ibf-chat-self' : (isLastModelDateStale() ? 'danger' : 'ibf-chat-not-self')" >
-        <ion-card-content>
-          <ng-content></ng-content>
-          <small><app-timestamp [timestamp]="timestamp"></app-timestamp></small>
-        </ion-card-content>
+    <ion-card
+      [color]="
+        isSelf
+          ? 'ibf-chat-self'
+          : isLastModelDateStale()
+          ? 'danger'
+          : 'ibf-chat-not-self'
+      "
+    >
+      <ion-card-content>
+        <ng-content></ng-content>
+        <small><app-timestamp [timestamp]="timestamp"></app-timestamp></small>
+      </ion-card-content>
     </ion-card>
-    
   </div>
 </div>
