fix: update on comments AB#10212

--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -28,7 +28,7 @@
       [color]="
         isSelf
           ? 'ibf-chat-self'
-          : isLastModelDateStale()
+          : isWarn
           ? 'danger'
           : 'ibf-chat-not-self'
       "
