--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -1,7 +1,7 @@
 <ion-content scrollY="true">
   <app-disaster-type></app-disaster-type>
   <!-- No event -->
-  <app-dialogue-turn isWarn="true">
+  <app-dialogue-turn isWarn="isWarn">
     <p
       [innerHTML]="
         'chat-component.' + disasterCategory + 'warn-label.message'
