added Time and name in text AB#10238

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -7,7 +7,8 @@
         'chat-component.' + disasterCategory + 'warn-label.message'
           | translate
             : {
-                lastModelRunDate: lastModelRunDate
+                lastModelRunDate: lastModelRunDate,
+                name: authService.displayName
               }
       "
     ></p>
