fix: zoom and pan while layer-menu open AB#10257

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
@@ -9,6 +9,10 @@
   }
 }
 
+#ibf-dashboard-map {
+  pointer-events: all !important;
+}
+
 .ibf-dashboard-interface {
   height: 100%;
   overflow: auto;
