feat: format lastmodelrun-date AB#10309

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -1,6 +1,6 @@
 <ion-content scrollY="true">
   <app-disaster-type></app-disaster-type>
-  <app-dialogue-turn *ngIf="lastModelRunDate" [isWarn]="isWarn">
+  <app-dialogue-turn [isWarn]="isWarn">
     <p
       [innerHTML]="
         'chat-component.' + disasterCategory + 'warn-label.message'
