added lead Time button and icons AB#10266 AB#10267 AB#10347

--- a/interfaces/IBF-dashboard/src/app/components/date-button/date-button.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/date-button/date-button.component.html
@@ -1,4 +1,8 @@
 <span>
+  <div *ngIf="displayHour">
+    <span class="hour">{{ displayHour }}</span>
+    <br />
+  </div>
   <div *ngIf="displayDate">
     <span class="date">{{ displayDate }}</span>
     <br />
