fix: change health popup text + legend AB#10474

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -68,6 +68,9 @@
               [class.waterpoint-layer]="
                 layer.name === IbfLayerName.waterpoints && layer.active
               "
+              [class.health-layer]="
+                layer.name === IbfLayerName.healthSites && layer.active
+              "
               [class.outline-layer]="
                 layer.name === IbfLayerName.alertThreshold && layer.active
               "
