feat: added new title segment 9121-sthakre

--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -1,10 +1,11 @@
 <span class="ion-float-start">
-  <ion-title size="small" data-test="user-display-name-label"
-    >Logged In As:</ion-title
-  >
-  <ion-title size="small" data-test="user-display-name">
-    <strong>{{ authService.displayName }}</strong>
-  </ion-title>
+  <ion-title class="center-heading" size="medium" data-test="heading-display-name-label"
+    >
+    <span>
+      IBF PORTAL <strong>{{ country?.countryName }} {{ disasterType }}</strong>
+    </span>
+    </ion-title
+  > 
 </span>
 
 <ion-button
