--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
@@ -76,7 +76,8 @@ app-export-view {
             span {
               &.today {
                 font-size: 24px;
-                padding-left: 10px;
+                padding-left: 20px;
+                font-weight: 600;
               }
             }
           }
